--- a/Assets/Project/Scripts/GameWorld.AI/GameWorld.AI.asmdef
+++ b/Assets/Project/Scripts/GameWorld.AI/GameWorld.AI.asmdef
@@ -1,3 +1,19 @@
 {
-	"name": "GameWorld.AI"
+    "name": "GameWorld.AI",
+    "rootNamespace": "GameWorld.AI",
+    "references": [
+        "GUID:3d8ec218fa715a741bbc21032e46c65a",
+        "GUID:d8b63aba1907145bea998dd612889d6b",
+        "GUID:e0cd26848372d4e5c891c569017e11f1",
+        "GUID:2665a8d13d1b3f18800f46e256720795"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
