fix: Pool now only accepts MonoBehaviour, SetActive(false) by default

--- a/Assets/Project/Scripts/GameWorld/GameWorld.asmdef
+++ b/Assets/Project/Scripts/GameWorld/GameWorld.asmdef
@@ -1,7 +1,10 @@
 {
     "name": "GameWorld",
     "rootNamespace": "GameWorld",
-    "references": [],
+    "references": [
+        "GUID:3d8ec218fa715a741bbc21032e46c65a",
+        "GUID:b6ffdb0bb7f4e5a42a4e2c185735856a"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
