--- a/Assets/Project/Scripts/GameWorld.UX/GameWorld.UX.asmdef
+++ b/Assets/Project/Scripts/GameWorld.UX/GameWorld.UX.asmdef
@@ -1,10 +1,8 @@
 {
-    "name": "GameWorld",
-    "rootNamespace": "GameWorld",
+    "name": "GameWorld.UX",
+    "rootNamespace": "GameWorld.UX",
     "references": [
-        "GUID:3d8ec218fa715a741bbc21032e46c65a",
-        "GUID:b6ffdb0bb7f4e5a42a4e2c185735856a",
-        "GUID:d8b63aba1907145bea998dd612889d6b"
+        "GUID:3d8ec218fa715a741bbc21032e46c65a"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
