--- a/Assets/Project/Scripts/GameWorld/GameWorld.asmdef
+++ b/Assets/Project/Scripts/GameWorld/GameWorld.asmdef
@@ -8,7 +8,8 @@
         "GUID:51827aa3895e6d94fa6c5fabf62fd5b4",
         "GUID:d8b63aba1907145bea998dd612889d6b",
         "GUID:5d380aad12070eb419c6e27b68ec6534",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:4307f53044263cf4b835bd812fc161a4"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
