feat: Cam shake on damage

--- a/Assets/Project/Scripts/GameWorld/GameWorld.asmdef
+++ b/Assets/Project/Scripts/GameWorld/GameWorld.asmdef
@@ -9,7 +9,8 @@
         "GUID:d8b63aba1907145bea998dd612889d6b",
         "GUID:5d380aad12070eb419c6e27b68ec6534",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:4307f53044263cf4b835bd812fc161a4"
+        "GUID:4307f53044263cf4b835bd812fc161a4",
+        "GUID:17b36165d09634a48bf5a0e4bb27f4bd"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
