--- a/Assets/Project/Scripts/GameWorld/GameWorld.asmdef
+++ b/Assets/Project/Scripts/GameWorld/GameWorld.asmdef
@@ -11,7 +11,8 @@
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:4307f53044263cf4b835bd812fc161a4",
         "GUID:17b36165d09634a48bf5a0e4bb27f4bd",
-        "GUID:75469ad4d38634e559750d17036d5f7c"
+        "GUID:75469ad4d38634e559750d17036d5f7c",
+        "GUID:fe685ec1767f73d42b749ea8045bfe43"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
